# azure-functions-custom-rust-handler

./: .funcignore  Cargo.toml  README.md  down.sh  terraform.tf  up.sh
.github/workflows/: build.yml  cicd.yml  deploy.yml
postman/: Hvalfangst Arithmetic API.postman_collection.json
src/: main.rs
src/arithmetic/: mod.rs  router.rs  service.rs
